<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
    </properties>

    <groupId>cn.llynsyw</groupId>
    <artifactId>learn-demo</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>learn-demo</name>
    <packaging>pom</packaging>

    <modules>
        <module>spring-learn</module>
        <module>mybatis-learn</module>
        <module>juc-learn</module>
        <module>junit-learn</module>
        <module>java-learn</module>
        <module>design-pattern</module>
        <module>work-learn</module>
        <module>jvm-learn</module>
        <module>bigdata-learn</module>
        <module>web-learn</module>
        <module>jdbc-learn</module>
        <module>security-learn</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.26</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>
                            --add-exports
                        </arg>
                        <arg>
                            java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED
                        </arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>